[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Hand.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Deck.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main_temp.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Discard.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/EnergyDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/default_theme.tres" type="Theme" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Deck" parent="." instance=ExtResource( 2 )]
visablity = true

[node name="Discard" parent="." instance=ExtResource( 4 )]

[node name="Hand" parent="." instance=ExtResource( 1 )]
margin_left = 175.0
margin_top = 473.0
margin_right = 1475.0
margin_bottom = 733.0

[node name="Draw_Card" type="Button" parent="."]
margin_left = 877.0
margin_top = 477.0
margin_right = 944.0
margin_bottom = 517.0
focus_mode = 0
theme = ExtResource( 6 )
enabled_focus_mode = 0
text = "Draw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="End_Turn" type="Button" parent="."]
margin_left = 878.0
margin_top = 526.0
margin_right = 945.0
margin_bottom = 546.0
focus_mode = 0
theme = ExtResource( 6 )
enabled_focus_mode = 0
text = "End Turn"

[node name="EnergyDisplay" parent="." instance=ExtResource( 5 )]
margin_left = 48.0
margin_top = 435.0
margin_right = 48.0
margin_bottom = 435.0
theme = ExtResource( 6 )

[connection signal="pressed" from="Draw_Card" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="End_Turn" to="." method="_on_End_Turn_pressed"]
